# EGG

./: .gitignore  Appendix.md  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  setup.py
app/: agent.json  analyze.py  analyze_no_graph.py  build_graph.py  build_graph_ai2thor.py  egg_visualizer.py  eval.py  export_frames.py  frames_to_video.py  generate_remembr_captions.py  get_eval_results.py  graph_pruning.py  obj.json  procthor.ipynb  remember_data.json  run_benchmark.py  visualize_failure_modes.py
configs/ai2-thor/: compatible_receptacles.yaml  object_type_config.toml
configs/camera/: astra2.yaml
python/egg/eval/: analyzer.py  dataset.py  evaluator.py
python/egg/graph/: edge.py  egg.py  event.py  event_graph.py  node.py  spatial.py  spatial_graph.py
python/egg/language/: llm.py  ollama_agent.py  openai_agent.py  vlm.py
python/egg/language/prompts/: answer_templates.py  evaluator_prompts.py  event_only_prompts.py  full_unified_prompts.py  no_edge_prompts.py  pruning_unified_no_edge_prompts.py  pruning_unified_prompts.py  spatial_only_prompts.py  video_captioning_prompts.py
python/egg/perception/: instance_matching.py  segment.py
python/egg/pruning/: egg_slicer.py  query_processor.py  strategies.py
python/egg/utils/: camera.py  language_utils.py  read_data.py  timestamp.py  visualizer.py
src/egg/ai2thor_interface/: actions.py  event_simulator.py  navigation.py
src/egg/eval/: qa_ground_truth.py
src/egg/graph/: edge.py  egg.py  event.py  node.py  spatial.py
src/egg/language/: llm.py  openai_agent.py
src/egg/language/prompts/: evaluator_prompts.py  full_unified_prompts.py  image_captioning_prompts.py  pruning_unified_no_edge_prompts.py
src/egg/pruning/: egg_slicer.py
src/egg/utils/: bounding_box.py  camera.py  data.py  geometry.py  image.py  language_utils.py  logger.py  timestamp.py  visualizer.py  viz_config.json
