<?xml version="1.0"?>
<package format="2">
  <name>egg</name>
  <version>0.0.0</version>
  <description>The Event-Grounding Graph (EGG) package</description>
  <maintainer email="phuoc.nguyen@aalto.fi">ros</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
